[project]
name = "liweather"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "build>=1.2.2.post1",
    "mcp[cli]>=1.10.1",
    "twine>=6.1.0",
]
[project.scripts]
liweather = "liweather:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
